# Exo2Micro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  exo2micro_notebook.ipynb  pyproject.toml  readthedocs.yaml
.virtual_documents/: exo2micro_notebook.ipynb
docs/source/: conf.py  index.rst  migration.rst
docs/source/developers/: concepts.rst  extending.rst  index.rst  parameters.rst  scale_methods.rst  scripting_api.rst
docs/source/developers/api/: alignment.rst  defaults.rst  gui.rst  index.rst  legacy.rst  parallel.rst  pipeline.rst  plotting.rst  utils.rst
docs/source/users/: before_you_start.rst  gui_tour.rst  index.rst  installation.rst  interpreting_results.rst  memory_and_performance.rst  quickstart.rst  scale_methods.rst  troubleshooting.rst  zoom_and_inspect.rst
exo2micro/: __init__.py  alignment.py  defaults.py  gui.py  legacy.py  parallel.py  pipeline.py  plotting.py  utils.py
